package C5S;

public interface Descargar {
    public abstract String descargar(Usuario usuario);
}
