@startuml

class Usuario {
- identificador: int
- tipo: String

//getters y setters
//constructor
}

interface Descargar {
--
+ {abstract} descargar();
}
class ServicioDescargaProxy{
+ descargar(Usuario usuario): String;
}
class ServicioDescarga{
+ descargar(Usuario usuario): String;
}

ServicioDescargaProxy <|.. Descargar
ServicioDescarga <|.. Descargar

@enduml